# Workspace-SSO

./: .dockerignore  .gitignore  1password_sso_setup.py  1password_sso_setup.sh  Dockerfile  README.md  account_manager.py  app.py  cloud_app.py  configure_1password.py  cookie_manager.py  data_processor.py  database.py  dir_check.py  docker-compose.yml  email_list_manager.py  email_verification_manager.py  gmail_api.py  google_workspace_setup.py  pyproject.toml  replit.nix  requirements.txt  safe_app.py  simple_app.py  sso_manager.py  streamlit_app.py  test_app.py  test_connection.py  test_minimal.py  ultra_minimal.py  visualizations.py
.streamlit/: config.toml
attached_assets/: Pasted-To-automate-the-1Password-SSO-configuration-with-Google-Cloud-you-can-use-scripts-to-configure-the--1742514673962.txt
config/: .env.example
services/: __init__.py  hunter_service.py  mailboxlayer_service.py  neutrinoapi_service.py  spokeo_service.py  zerobounce_service.py
static/: index.html  styles.css
